--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,18 +3,18 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
+    "configurations": [        
+
         {
-            "name": "Python Debugger: Current File",
+            "name": "Current File",
             "type": "debugpy",
             "request": "launch",
-            "program": "${file}",
+            "module": "examples.notebooks.Local-Model-With-LMStudio",
             "console": "integratedTerminal",
-            "justMyCode": true,
             "cwd": "${workspaceFolder}",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}"
-            }
-        }
+            "justMyCode": false
+        },
+        
     ]
 }
+
